# Argus

./: Cargo.toml  LICENSE  README.md  build.bat  build.sh
src/: extractors.rs  index.rs  main.rs  search.rs  types.rs  ui.rs
