[package]
name = "argus"
version = "1.0.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "The all-seeing file search tool - search across any file format with OCR support"
license = "MIT"
readme = "README.md"
keywords = ["search", "cli", "pdf", "ocr", "grep"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = []
ocr = ["leptess", "libc"]

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File walking
walkdir = "2.4"
ignore = "0.4"

# Colors and terminal UI
colored = "2.1"
console = "0.15"
indicatif = { version = "0.17", features = ["tokio"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# PDF extraction
pdf-extract = "0.7"

# DOCX extraction
docx-rs = "0.4"
zip = "0.6"
quick-xml = "0.31"

# OCR (optional)
leptess = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }

# Image handling
image = "0.24"

# File opening
opener = "0.6"

# Regex support
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallel processing
rayon = "1.8"

# Path handling
pathdiff = "0.2"

# Encoding detection
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# MIME type detection
infer = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
