[package]
name = "argus"
version = "1.0.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "The all-seeing file search tool - search across any file format with OCR support"
license = "MIT"
readme = "README.md"
keywords = ["search", "cli", "pdf", "ocr", "grep"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = []
ocr = ["leptess", "libc", "dep:lopdf", "dep:image", "dep:tempfile"]

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# File walking
walkdir = "2.4"

# Colors and terminal UI
colored = "2.1"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# PDF extraction
pdf-extract = "0.7"

# DOCX extraction (uses zip to read the archive)
zip = "0.6"

# OCR (optional)
leptess = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }

# PDF OCR: extract images from scanned PDFs (optional, part of ocr feature)
lopdf = { version = "0.34", optional = true }
image = { version = "0.25", optional = true }
tempfile = { version = "3.24", optional = true }

# File opening
opener = "0.6"

# Regex support
regex = "1.10"

# Serialization (for index files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Parallel processing
rayon = "1.8"

# Encoding detection
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# MIME type detection
infer = "0.15"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
